--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,15 @@ spring:
     show-sql: true
   datasource:
     url: jdbc:mysql://localhost:3306/db
-    username: user
-    password: password
+    username: root
+    password: rootUser123
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   application:
     name: "quartz-demo"
+  batch:
+    jdbc:
+      initialize-schema: always
 logging:
   level:
     root: info
